<resources>
    <string name="app_name">MM</string>

    <!-- 主页面-->
    <string name="main_nearby">...</string>
    <string name="main_message">消息</string>
    <string name="main_friends">朋友</string>
    <string name="main_dynamic">动态</string>
    <string name="main_info_center">个人中心</string>

    <string name="main_home_menu_student">学生</string>
    <string name="main_home_menu_teacher">老师</string>
    <string name="main_home_menu_doctor">医生</string>
    <string name="main_home_upload_location">上传我的位置</string>
    <string name="main_home_clear_my_location">清除我的位置</string>

    <string name="main_home_upload_location_success">我的位置上传成功</string>
    <string name="main_home_upload_location_failure">我的位置上传失败</string>
    <string name="main_home_clear_my_location_success">清除我的位置成功</string>
    <string name="main_home_clear_my_location_failure">清除我的位置失败</string>
    <string name="main_home_tips_nearby_search_empty">没有找到相关附近的人，您可以扩大搜索范围试试。</string>

    <string name="main_message_clear_all">清除全部</string>
    <string name="main_message_clear_selected">选择清除</string>
    <string name="main_message_filter">筛选</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <!-- 信息中心 -->
    <string name="mine_info_title">我的信息</string>
    <string name="mine_info_dynamic">我的动态</string>
    <string name="mine_info_photos">我的照片</string>
    <string name="mine_info_like">兴趣爱好</string>
    <string name="mine_info_do_latest">最近做了什么</string>
    <string name="mine_info_more">更多的我</string>
    
    <string name="info_head_img">头像</string>
    <string name="info_detail">详细资料</string>
    <string name="info_photo_album">照片墙</string>
    <string name="info_card">名片</string>
    <string name="info_hobby_show_settings">兴趣爱好展示设置</string>

    <string name="info_nick_name">昵称</string>
    <string name="info_gender">性别</string>
    <string name="info_age">年龄</string>
    <string name="info_birthday">生日</string>
    <string name="info_constellation">星座</string>
    <string name="info_occupation">职业</string>
    <string name="info_company">公司</string>
    <string name="info_school">学校</string>
    <string name="info_current_address">所在地</string>
    <string name="info_hometown_address">故乡</string>
    <string name="info_email">邮箱</string>
    <string name="info_self_description">个人说明</string>
    <string name="info_self_des_hints">介绍下自己吧</string>

    <string name="info_detail_title">详细资料</string>
    <string name="info_edit_title">编辑资料</string>
</resources>
